# docs/source/_static/openapi_v1.yaml
@@ -1,174 +1,31 @@
-components:
-  schemas:
-    Echo:
-      description: Response model for echo endpoint.
-      properties:
-        text:
-          description: The echo
-          examples:
-          - HELLO, WORLD!
-          minLength: 1
-          title: Text
-          type: string
-      required:
-      - text
-      title: Echo
-      type: object
-    HTTPValidationError:
-      properties:
-        detail:
-          items:
-            $ref: '#/components/schemas/ValidationError'
-          title: Detail
-          type: array
-      title: HTTPValidationError
-      type: object
-    Health:
-      description: Health status model.
-      properties:
-        reason:
-          anyOf:
-          - type: string
-          - type: 'null'
-          title: Reason
-        status:
-          $ref: '#/components/schemas/HealthStatus'
-      required:
-      - status
-      title: Health
-      type: object
-    HealthStatus:
-      description: Health status enumeration.
-      enum:
-      - UP
-      - DOWN
-      title: HealthStatus
-      type: string
-    ValidationError:
-      properties:
-        loc:
-          items:
-            anyOf:
-            - type: string
-            - type: integer
-          title: Location
-          type: array
-        msg:
-          title: Message
-          type: string
-        type:
-          title: Error Type
-          type: string
-      required:
-      - loc
-      - msg
-      - type
-      title: ValidationError
-      type: object
-    _HelloWorldResponse:
-      description: Response model for hello-world endpoint.
-      properties:
-        message:
-          description: The hello world message
-          examples:
-          - Hello, world!
-          title: Message
-          type: string
-      required:
-      - message
-      title: _HelloWorldResponse
-      type: object
-info:
-  contact:
-    email: helmuthva@gmail.com
-    name: Helmut Hoffer von Ankershoffen
-    url: https://github.com/helmut-hoffer-von-ankershoffen
-  termsOfService: https://oe-python-template-example.readthedocs.io/en/latest/
-  title: OE Python Template Example
-  version: 1.0.0
-openapi: 3.1.0
-paths:
-  /echo/{text}:
-    get:
-      description: "Echo back the provided text.\n\nArgs:\n    text (str): The text\
-        \ to echo.\n\nReturns:\n    Echo: The echo.\n\nRaises:\n    422 Unprocessable\
-        \ Entity: If text is not provided or empty."
-      operationId: echo_echo__text__get
-      parameters:
-      - in: path
-        name: text
-        required: true
-        schema:
-          title: Text
-          type: string
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Echo'
-          description: Successful Response
-        '422':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-          description: Validation Error
-      summary: Echo
-      tags:
-      - Basics
-  /health:
-    get:
-      description: "Check the health of the service.\n\nThis endpoint returns the\
-        \ health status of the service.\nThe health status can be either UP or DOWN.\n\
-        If the service is healthy, the status will be UP.\nIf the service is unhealthy,\
-        \ the status will be DOWN and a reason will be provided.\nThe response will\
-        \ have a 200 OK status code if the service is healthy,\nand a 500 Internal\
-        \ Server Error status code if the service is unhealthy.\n\nReturns:\n    Health:\
-        \ The health status of the service."
-      operationId: health_health_get
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Health'
-          description: Successful Response
-      summary: Health
-      tags:
-      - Observability
-  /healthz:
-    get:
-      description: "Check the health of the service.\n\nThis endpoint returns the\
-        \ health status of the service.\nThe health status can be either UP or DOWN.\n\
-        If the service is healthy, the status will be UP.\nIf the service is unhealthy,\
-        \ the status will be DOWN and a reason will be provided.\nThe response will\
-        \ have a 200 OK status code if the service is healthy,\nand a 500 Internal\
-        \ Server Error status code if the service is unhealthy.\n\nReturns:\n    Health:\
-        \ The health status of the service."
-      operationId: health_healthz_get
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Health'
-          description: Successful Response
-      summary: Health
-      tags:
-      - Observability
-  /hello-world:
-    get:
-      description: "Return a hello world message.\n\nReturns:\n    _HelloWorldResponse:\
-        \ A response containing the hello world message."
-      operationId: hello_world_hello_world_get
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/_HelloWorldResponse'
-          description: Successful Response
-      summary: Hello World
-      tags:
-      - Basics
+Traceback (most recent call last):
+  File "/Users/helmut/Code/oe-python-template-example/.nox/docs-3-13/bin/oe-python-template-example", line 4, in <module>
+    from oe_python_template_example.cli import cli
+  File "/Users/helmut/Code/oe-python-template-example/src/oe_python_template_example/__init__.py", line 8, in <module>
+    from .models import Echo, Health, HealthStatus, Utterance
+  File "/Users/helmut/Code/oe-python-template-example/src/oe_python_template_example/models.py", line 5, in <module>
+    from pydantic import BaseModel, Field
+  File "<frozen importlib._bootstrap>", line 1412, in _handle_fromlist
+  File "/Users/helmut/Code/oe-python-template-example/.nox/docs-3-13/lib/python3.13/site-packages/pydantic/__init__.py", line 421, in __getattr__
+    module = import_module(module_name, package=package)
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py", line 88, in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/Users/helmut/Code/oe-python-template-example/.nox/docs-3-13/lib/python3.13/site-packages/pydantic/main.py", line 34, in <module>
+    from ._internal import (
+    ...<12 lines>...
+    )
+  File "/Users/helmut/Code/oe-python-template-example/.nox/docs-3-13/lib/python3.13/site-packages/pydantic/_internal/_generics.py", line 8, in <module>
+    from contextvars import ContextVar
+  File "/opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/lib/python3.13/contextvars.py", line 1, in <module>
+    from _contextvars import Context, ContextVar, Token, copy_context
+  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
+  File "<frozen importlib._bootstrap>", line 1322, in _find_and_load_unlocked
+  File "<frozen importlib._bootstrap>", line 1262, in _find_spec
+  File "<frozen importlib._bootstrap_external>", line 1559, in find_spec
+  File "<frozen importlib._bootstrap_external>", line 1533, in _get_spec
+  File "<frozen importlib._bootstrap_external>", line 1666, in find_spec
+  File "<frozen importlib._bootstrap_external>", line 1621, in _get_spec
+  File "<frozen importlib._bootstrap_external>", line 859, in spec_from_file_location
+  File "<frozen importlib._bootstrap_external>", line 190, in _path_abspath
+KeyboardInterrupt
